--- a/RandomPassword-Gen/styles.css
+++ b/RandomPassword-Gen/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     
 }
 
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg , #e3ec66, #2222, #d31a32e0);
-    padding-top:150px;
+    padding:200px 0 ;
     
 }
 .title{
