--- a/RandomPassword-Gen/styles.css
+++ b/RandomPassword-Gen/styles.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg , #e3ec66, #2222, #d31a32e0);
-    padding:200px 0 ;
+    padding:100px 0 ;
     
 }
 .title{
@@ -18,6 +18,7 @@
     margin: 40px auto 0 ;
     padding: 40px;
     border-radius: 20px;
+    
 }
 
 h1{
@@ -73,3 +74,12 @@ button{
     cursor: pointer;
 }
 
+.QRcreator {
+    margin-top: 400px;
+    text-align: center;
+    gap:10px
+}
+.QRcreator h1{
+    
+    padding-bottom: 10px;
+}
