--- a/ToastBar/styles.css
+++ b/ToastBar/styles.css
@@ -1,81 +1,140 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 
-.main{
-    background: linear-gradient(135deg, #5884c2, #4ce1c8 ,#858585);
-    position: relative;
+ .main {
+  background: linear-gradient(135deg, #5884c2, #4ce1c8, #858585);
+  
 }
-.btn{
-    display: flex;
-    gap: 50px;
-    padding:130px 0 381px 0; 
-    justify-content: center;
+
+
+
+p{
+  margin: 20px;
+   color: var(--primary-color);
 }
+
+
+
+:root {
+  --primary-color: #ebeef4;
+  --secondry-clor: #212121;
+}
+
+
+.darkMode {
+  --primary-color: #6d78b2;
+  --secondry-clor: #ba7a7a;
+}
+
+body {
+  background-color: var(--primary-color);
+  color: var(--secondry-clor);
+}
+
+
+
+
+.Theme {
+  display: flex;
+  gap: 10px;
+  border: solid black;
+  justify-content: center;
+  padding: 20px;
+}
+
+.lightmode {
+  color: yellow;
+  font-size: 40px;
+  width: 80px;
+
+}
+
+.darkMode {
+  
+  color: black;
+  font-size: 45px;
+
+
+} 
+
+
+
+
+
+.btn {
+  display: flex;
+  gap: 50px;
+  padding: 130px 0 381px 0;
+  justify-content: center;
+}
+
 button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background: green;
-    color: white;
-    border-radius: 7px;
-    border: none;
-    cursor: pointer;
+  padding: 10px 20px;
+  font-size: 16px;
+  background: green;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  cursor: pointer;
 
+}
+
+#toastBox {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 20px;
+  overflow: hidden;
+  gap: 5px;
+}
+
+.ctost {
+  background: white;
+  padding: 13px;
+  border-radius: 3px;
+  height: 20px;
+  width: 190px;
+  position: relative;
+  margin: 15px 0;
+  box-shadow: 0 0 20px rosybrown;
+  transform: translateX(100%);
+  animation: moveleft 0.5s linear forwards;
+
+}
+
+@keyframes moveleft {
+  100% {
+    transform: translateX(0);
   }
 
-#toastBox{
-    position: absolute;
-    bottom: 20px;
-    right: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 20px;
-    overflow: hidden; 
-    gap: 5px;   
+}
+
+.ctost::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background: green;
+  animation: anim 5s linear forwards;
+}
+
+@keyframes anim {
+  100% {
+    width: 0;
   }
 
-.ctost{
-    background: white;
-    padding: 13px;
-    border-radius: 3px;
-    height: 20px;
-    width: 190px;
-    position: relative;
-    margin: 15px 0;
-    box-shadow: 0 0 20px rosybrown;
-    transform: translateX(100%);
-    animation: moveleft 0.5s linear forwards;
+}
 
-  }
+.ctost.error i {
+  background: red;
+}
 
-  @keyframes moveleft {
-    100%{
-      transform: translateX(0);
-    }
-    
-  }
 
-.ctost::after{
-    content: '';
-    position: absolute; 
-    left: 0;
-    bottom: 0; 
-    width: 100%;
-    height: 5px;
-    background: green;
-    animation: anim 5s linear forwards;
-  }
-
-  @keyframes anim{
-    100%{
-        width: 0;
-    }
-
-  }
-
-  .ctost.error i{
-    background: red;
-  }
